// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag[Base] should render correctly  1`] = `
<div>
  <div
    class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="cftjec0 soui-tag-tag c-6s9snc soui-tag-info cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Info
    </span>
  </div>
  <div
    class="cftjec0 soui-tag-tag cbkmvn1 soui-tag-danger cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Danger
    </span>
  </div>
  <div
    class="cftjec0 soui-tag-tag c-1kg4ha soui-tag-warning cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Warning
    </span>
  </div>
  <div
    class="cftjec0 soui-tag-tag cjzj7w9 soui-tag-success cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Success
    </span>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about color 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag cce8mqr soui-tag-tangerine cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6ge8bl soui-tag-magenta cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag chk8z0m soui-tag-purple cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag ce4tyzg soui-tag-indigo cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6sdej7 soui-tag-cyan cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s6s68 soui-tag-neon cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2sea09 soui-tag-lemon cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2n4oks soui-tag-brown cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag cce8mqr soui-tag-tangerine c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6ge8bl soui-tag-magenta c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag chk8z0m soui-tag-purple c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag ce4tyzg soui-tag-indigo c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6sdej7 soui-tag-cyan c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s6s68 soui-tag-neon c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2sea09 soui-tag-lemon c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2n4oks soui-tag-brown c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag cce8mqr soui-tag-tangerine cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6ge8bl soui-tag-magenta cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag chk8z0m soui-tag-purple cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag ce4tyzg soui-tag-indigo cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6sdej7 soui-tag-cyan cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s6s68 soui-tag-neon cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2sea09 soui-tag-lemon cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2n4oks soui-tag-brown cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag cce8mqr soui-tag-tangerine c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Tangerine
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6ge8bl soui-tag-magenta c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Magenta
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag chk8z0m soui-tag-purple c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Purple
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag ce4tyzg soui-tag-indigo c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Indigo
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6sdej7 soui-tag-cyan c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Cyan
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s6s68 soui-tag-neon c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Neon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2sea09 soui-tag-lemon c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Lemon
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2n4oks soui-tag-brown c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Brown
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about mode 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s9snc soui-tag-info cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cbkmvn1 soui-tag-danger cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-1kg4ha soui-tag-warning cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cjzj7w9 soui-tag-success cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s9snc soui-tag-info c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cbkmvn1 soui-tag-danger c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-1kg4ha soui-tag-warning c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cjzj7w9 soui-tag-success c-6sbt6b soui-tag-fill"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s9snc soui-tag-info cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cbkmvn1 soui-tag-danger cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-1kg4ha soui-tag-warning cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cjzj7w9 soui-tag-success cwkkgs8 soui-tag-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
  <div
    style="margin-bottom: 0px;"
  >
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-6s9snc soui-tag-info c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Info
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cbkmvn1 soui-tag-danger c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Danger
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c-1kg4ha soui-tag-warning c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Warning
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag cjzj7w9 soui-tag-success c89sm6 soui-tag-bright-outline"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Success
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Base] should render correctly about size 1`] = `
<div>
  <div
    style="margin-bottom: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag c2wdp31 soui-tag-small c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Small
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Default
      </span>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2sbtkh soui-tag-large c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        Large
      </span>
    </div>
  </div>
  <div>
    <div
      class="cftjec0 soui-tag-tag c2wdp31 soui-tag-small c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <div
        class="c680d3d soui-tag-wrapper"
      >
        <span
          class="c6rn6pj soui-tag-container"
        >
          Small
        </span>
      </div>
      <div
        class="c5kv07b soui-tag-close-icon"
      >
        <span
          class="ctfp424 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <div
        class="c680d3d soui-tag-wrapper"
      >
        <span
          class="c6rn6pj soui-tag-container"
        >
          Default
        </span>
      </div>
      <div
        class="c5kv07b soui-tag-close-icon"
      >
        <span
          class="ctfp424 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cftjec0 soui-tag-tag c2sbtkh soui-tag-large c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <div
        class="c680d3d soui-tag-wrapper"
      >
        <span
          class="c6rn6pj soui-tag-container"
        >
          Large
        </span>
      </div>
      <div
        class="c5kv07b soui-tag-close-icon"
      >
        <span
          class="ctfp424 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about dynamic 1`] = `
<div>
  <div
    style="display: flex; align-items: center; height: 24px;"
  >
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <div
        class="c680d3d soui-tag-wrapper"
      >
        <span
          class="c6rn6pj soui-tag-container"
        >
          Tag 1
        </span>
      </div>
      <div
        class="c5kv07b soui-tag-close-icon"
      >
        <span
          class="ctfp424 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
    >
      <div
        class="c680d3d soui-tag-wrapper"
      >
        <span
          class="c6rn6pj soui-tag-container"
        >
          Tag 2
        </span>
      </div>
      <div
        class="c5kv07b soui-tag-close-icon"
      >
        <span
          class="ctfp424 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright cinzkw6 soui-tag-disabled"
    >
      <div
        class="c680d3d soui-tag-wrapper"
      >
        <span
          class="c6rn6pj soui-tag-container"
        >
          Tag 3
        </span>
      </div>
      <div
        class="c5kv07b soui-tag-close-icon"
      >
        <span
          class="ctfp424 soui-tag-close-icon-wrapper"
        >
          <svg
            height="10"
            viewBox="0 0 10 10"
            width="10"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cwkkgs8 soui-tag-outline"
      style="cursor: pointer; border-style: dashed;"
    >
      <span
        class="c680d3d soui-tag-wrapper"
      >
        <div
          style="display: flex; align-items: center;"
        >
          <div
            style="color: rgb(102, 108, 124); margin-inline-end: 4px;"
          >
            + 
          </div>
          <div>
            Add Tag
          </div>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Input] should render correctly about input 1`] = `
<div>
  <div
    class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
  >
    <div
      class="c680d3d soui-tag-wrapper"
    >
      <span
        class="c6rn6pj soui-tag-container"
      >
        Abc
      </span>
    </div>
    <div
      class="c5kv07b soui-tag-close-icon"
    >
      <span
        class="ctfp424 soui-tag-close-icon-wrapper"
      >
        <svg
          height="10"
          viewBox="0 0 10 10"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.92204 1.33738L1.96129 1.37204L5 4.41042L8.03871 1.37204C8.20142 1.20932 8.46524 1.20932 8.62796 1.37204C8.77816 1.52224 8.78972 1.75859 8.66262 1.92204L8.62796 1.96129L5.58958 5L8.62796 8.03871C8.79068 8.20142 8.79068 8.46524 8.62796 8.62796C8.47776 8.77816 8.24141 8.78972 8.07796 8.66262L8.03871 8.62796L5 5.58958L1.96129 8.62796C1.79858 8.79068 1.53476 8.79068 1.37204 8.62796C1.22184 8.47776 1.21028 8.24141 1.33738 8.07796L1.37204 8.03871L4.41042 5L1.37204 1.96129C1.20932 1.79858 1.20932 1.53476 1.37204 1.37204C1.52224 1.22184 1.75859 1.21028 1.92204 1.33738Z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Tag[Shape] should render correctly about shape 1`] = `
<div>
  <div
    class="cftjec0 soui-tag-tag c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Default
    </span>
  </div>
  <div
    class="cftjec0 soui-tag-tag c2qyhr7 soui-tag-rounded c5dtlo7 soui-tag-default cavsy2s soui-tag-bright"
  >
    <span
      class="c680d3d soui-tag-wrapper"
    >
      Rounded
    </span>
  </div>
</div>
`;
